--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,84 @@
 /* font face by Anke Arnold (www.anke-art.de) */
 /*@font-face{
    font-family:"ParryHotter";
-   src: url("https://github.com/SiobhanBaines/Siobhan-Baines-MS2-HP-Game/blob/615e32a396599d4488cdf62a2002f6122bbcbdd1/assets/fonts/ParryHotter.ttf") format("truetype");
+   src: url("assets/fonts/parry-hotter.ttf") format("truetype");
 }*/
 /* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap'); */
 /* body */
 body {
-   /*background-color:#4B0082;*/
+   margin: 0;
+   padding: 0;; 
+   font-family: "ParryHotter", Arial, Helvetica, sans-serif;
+   font-weight: 700;
+   color: #ffffff;
+   height: 100%;
+   background-color:#200236;
 }
 
+.navbar { /* Copied from Whiskey Drop - Coding Institute - modified */
+    margin-bottom: 0;
+    border: 0;
+    width: 100%;
+}
+.nav-item {
+    font-size: 20px;
+    font-weight: 500;
+}
+.navbar-light .navbar-nav .nav-link{
+    color: #444c5d;
+}
+.school-crest-container{
+   height: 100%;
+   width: 100%;
+   background-size: cover;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-align: center;
+      -ms-flex-align: center;
+         align-items: center;
+   -webkit-box-pack: center;
+      -ms-flex-pack: center;
+         justify-content: center;
+   position: relative;
+}
 h1 {
    font-family: "ParryHotter", Arial, sans-serif;
-   font-size: large; 
+   font-size: xx-large; 
    color: #f5cd11;
+   font-weight: 900;
 }
 
-.hogwarts-crest{
-   background-image: url(assets/images/hogwarts_crest.png/);
+#hogwarts-crest{
    position: absolute;
-   width: 50%;
-   margin:0 auto;
-
+   width: 200;
+   height: 200;
+   
 }
+
+.house-crest-container{
+   height: 100%;
+   width: 100%;
+   background-size: cover;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-align: center;
+      -ms-flex-align: center;
+         align-items: center;
+   -webkit-box-pack: center;
+      -ms-flex-pack: center;
+         justify-content: center;
+   position: relative;
+}
+.game-btn{
+   display: inline-block;
+   width: 25%;
+   height: 25%;
+}
+
+.gryffindor{}
+.slytherin{}
+.hufflpuff{}
+.ravenclaw{}
 
