--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,30 +5,16 @@
     font-weight: normal;
     font-style: normal;
 }
-/*@font-face {
-font-family: ‘Harry Potter’;
-src: url("http://www.fontsaddict.com/fontface/harry-potter.TTF");
-}
-/*@font-face {
-    font-family: 'parry_hotterregular';
-    src: url('assets/fornts/parryhotter-webfont.woff2') format('woff2'),
-         url('assets/fonts/parryhotter-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap'); */
-/* body */
-body {
-   margin: 0;
-   padding: 0;; 
- /*  font-family: "parry_hotterregular", Arial, Helvetica, sans-serif;*/
-/*   font-family: "parry_hotterregular", Arial, Helvetica, sans-serif;*/
 
+/* body */
+html, body {
+   margin: 0;
+   padding: 0;
+   font-family: 'Ubuntu', sans-serif;
    font-weight: 700;
    color: #ffffff;
-   height: 100%;
    background-color:#200236;
-   overflow: hidden;
+   height: 100%;
 }
 /*------------------------------------------Header*/
 header{
@@ -51,49 +37,41 @@ header{
 .navbar-dark .navbar-nav .nav-link{
    color: #ffffff;
 }
+
 .school-crest-container{
-   height: 100vh;
-   width: 100vw;
+   max-height: 100vh;
+   max-width: 100vw;
    justify-content: center;
-   padding: 10%;
+   padding: 5%;
    align-items: center;
    position: absolute;
 }
 
 h1 {
-   font-size: 48px; 
-}
-
-.welcome{
-   margin-bottom: 15px;
-   border-bottom: 0;
-   text-align: center;
+   font-size: 48px;  
    font-family: "ParryHotter", sans-serif;
    color: #f5cd11;
 }
+
+.welcome{
+   padding-bottom: 15px;
+   text-align: center;
+}
 .hogwarts-crest{
-   /*display: grid;
-   height: 70%;
-   max-width: 70%;
-   max-height: 100vh;
-   margin: auto; */
-   justify-content: center;
-   align-items: center;
-   position:absolute;
-   right:10%;
-   top:0px;
-   width:60%;
-   height:auto;
+   text-align: center;
+   width: 45%;
+   margin: auto;
+   display: block;
 }
 
 .house-crest-container{
    overflow: hidden;
 }
+
 .game-btn{
    display: inline-block;
    width: 25%;
    height: 25%;
-
 }
 
 .gryffindor{}
@@ -102,29 +80,37 @@ h1 {
 .ravenclaw{}
 
 /*--------------------------------------------Media Queries*/
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
    .school-crest-container{
-     /* height: auto;
-      width: auto;*/
-      padding-top: 35%;
-      align-items: center;
-      position: relative;
+      padding-top: 25%;
    }
-   h1 {
-   font-size: 34px; 
+   h1 { 
+      padding-bottom: 10%;
    }
    .hogwarts-crest{
-      /*display: grid;
-      height: 90%;
-      max-width: 100%;
-      max-height: 70vh;
-      margin: auto;*/
-      justify-content: center;
-      align-items: center;
-      position:absolute;
-      right:10%;
-      top:0px;
-      width:60%;
-      height:auto;
+      width: 60%;
+   }
+}
+@media (max-width: 768px) {
+   .school-crest-container{
+      padding-top: 20%;
+   }
+   h1 {
+      padding-bottom: 10%;
+   }
+   .hogwarts-crest{  
+      width: 70%;
+   }
+}
+@media (max-width: 540px) {
+   .school-crest-container{
+      padding-top: 30%;
+   }
+   h1 {
+      font-size: 34px; 
+      padding-bottom: 10%;
+   }
+   .hogwarts-crest{
+      width: 80%;
    }
 }
