--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,12 +12,21 @@ html, body {
    padding: 0;
    font-family: 'Ubuntu', sans-serif;
    font-weight: 700;
-   color: #ffffff;
+   color: #fff;
    background-color:#200236;
    height: 100%;
 }
+.inline-block{
+   display: inline-block;
+}
+
+a {
+   color: #fff;
+}
+
 /*------------------------------------------Header*/
 header{
+
    margin: 0;
    min-height: 50px;
    z-index: 10;
@@ -37,7 +46,34 @@ header{
 .navbar-dark .navbar-nav .nav-link{
    color: #ffffff;
 }
+/*------------------------------------------Footer*/
+footer {
+   margin: 0;
+   min-height: 50px;
+   z-index: 10;
+   position: fixed;
+   bottom:0;
+   width: 100vw;
+}
+footer ul {
+   width: 100%;
+   padding: 0;
+   margin: 0;
+   margin-top: 10px;
+}
+.footer ul li {
+   list-style: none;
+   margin-top: 12px;
+   padding: 0;
+}
+.social-media {
+   font-size: 25px;
+   font-weight: bold;
+   position: relative;
+   text-align: center;
+}
 
+/*---------------------------------------Home Page*/
 .school-crest-container{
    max-height: 100vh;
    max-width: 100vw;
@@ -63,7 +99,7 @@ h1 {
    margin: auto;
    display: block;
 }
-
+/*---------------------------------------Game Page*/
 .house-crest-container{
    overflow: hidden;
 }
@@ -78,6 +114,9 @@ h1 {
 .slytherin{}
 .hufflpuff{}
 .ravenclaw{}
+
+/*----------------------------------------Footer*/
+
 
 /*--------------------------------------------Media Queries*/
 @media (max-width: 1024px) {
