--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,298 +1,329 @@
 /* font face by Anke Arnold (www.anke-art.de) */
-@font-face {
+@font-face{
     font-family: 'ParryHotter';
     src: url('fonts/ParryHotter.ttf');
     font-weight: normal;
     font-style: normal;
 }
-
 /*----------------------------------------- colour*/
 .gryffindor-red,
 .slytherin-green,
 .hufflpuff-yellow, 
-.ravenclaw-blue {
-   filter:brightness(2);
+.ravenclaw-blue{
+    filter:brightness(2);
 }
-
-
-
 /*------------------------------------------Global*/
-html, body {
-   animation: fadeIn 500ms;
-   margin: 0;
-   padding: 0;
-   font-family: 'Ubuntu', sans-serif;
-   font-weight: 700;
-   color: #fff;
-   background-color:#200236;
-   width: 100%;
-   min-height: 100vh;
-   height: 100vh;
-   position: absolute;
-   overflow: hidden;
+html, body{
+    animation: fadeIn 500ms;
+    margin: 0;
+    padding: 0;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+    color: #fff;
+    background-color:#200236;
+    width: 100%;
+    min-height: 100vh;
+    height: 100vh;
+    position: absolute;
 }
 .inline-block{
-   display: inline-block;
+    display: inline-block;
 }
-
-a {
-   color: #fff;
+a{
+    color: #fff;
 }
-
-h1 {
-   padding: 0%;
-   font-size: 40px;  
-   font-family: "ParryHotter", sans-serif;
-   color: #f5cd11;
+h1{
+    padding: 0%;
+    font-size: 40px;  
+    font-family: "ParryHotter", sans-serif;
+    color: #f5cd11;
 }
-
 /*------------------------------------------Header*/
 header{
-   margin: 0;
-   min-height: 20px;
-   z-index: 10;
-   position: fixed;
-   top: 0;
-   width: 100vw;
+    margin: 0;
+    min-height: 20px;
+    z-index: 10;
+    position: fixed;
+    top: 0;
+    width: 100vw;
 }
-.navbar-dark {
-   float: right;
-   top:0;
-   border-width: 0 0 1px;
+.navbar-dark{
+    float: right;
+    top:0;
+    border-width: 0 0 1px;
 }
-
-.nav-item {
-   font-size: 20px;
-   font-weight: 500;
+.nav-item{
+    font-size: 20px;
+    font-weight: 500;
 }
 .navbar-dark .navbar-nav .nav-link{
-   color: #ffffff;
+    color: #ffffff;
 }
 button.navbar-toggler{
-   float: right;
+    float: right;
 }
-
 /*------------------------------------------Footer*/
-footer {
-   margin: 0;
-   min-height: 50px;
-   z-index: 10;
-   position: fixed;
-   bottom:0;
-   width: 100vw;
+footer{
+    margin: 0;
+    min-height: 50px;
+    z-index: 10;
+    position: fixed;
+    bottom:0;
+    width: 100vw;
 }
-footer ul {
-   width: 100%;
-   padding: 0;
-   margin: 0;
-   margin-top: 10px;
+footer ul{
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    margin-top: 10px;
 }
-.footer ul li {
-   list-style: none;
-   margin-top: 12px;
-   padding: 0;
+.footer ul li{
+    list-style: none;
+    margin-top: 12px;
+    padding: 0;
 }
-.social-media {
-   font-size: 25px;
-   font-weight: bold;
-   position: relative;
-   text-align: center;
+.social-media{
+    font-size: 25px;
+    font-weight: bold;
+    position: relative;
+    text-align: center;
 }
-
 /*---------------------------------------Home Page*/
 .school-crest-container{
-   animation: moveUp 1s; /*feature 1 - dcode */
-   max-height: 100vh;
-   max-width: 100vw;
-   justify-content: center;
-   padding: 5% 0;
-   align-items: center;
-   position: absolute;
+    animation: moveUp 1s; /*feature 1 - dcode */
+    max-height: 100vh;
+    max-width: 100vw;
+    justify-content: center;
+    padding: 5% 0;
+    align-items: center;
+    position: absolute;
+    overflow: hidden;
 }
-
 .title{
-   height: 10vh;
-   padding-bottom: 1%;
-   text-align: center;
+    height: 10vh;
+    padding-bottom: 1%;
+    text-align: center;
 }
 .hogwarts-crest{
-   text-align: center;
-   width: 30%;
-   margin: auto;
-   display: block;
+    text-align: center;
+    width: 30%;
+    margin: auto;
+    display: block;
 }
-
 /*---------------------------------------Game Page*/
 .house-crest-container{
-   max-height: 100vh;
-   max-width: 100vw;
-   justify-content: center;
-   padding: 5% 0;
-   align-items: center;
-   position: absolute;
+    max-height: 100vh;
+    max-width: 100vw;
+    justify-content: center;
+    padding: 5% 0;
+    align-items: center;
+    position: absolute;
+    overflow: hidden;
 }
-
-#play {
-   margin: 0;
-   padding: 0;
-   border: 3px solid #f5cd11;
-   color:#f5cd11;
-   position: absolute;
-   z-index: 2;
-   left: 0; right: 0; top: 0; bottom: 0; margin: auto; /* center */
-   font-size: 500%;
-   border: none;
-   background: none;
+#play{
+    margin: 0;
+    padding: 0;
+    border: 3px solid #f5cd11;
+    color:#f5cd11;
+    position: absolute;
+    z-index: 2;
+    left: 0; right: 0; top: 0; bottom: 0; margin: auto; /* center */
+    font-size: 500%;
+    border: none;
+    background: none;
 }
-
-.button:hover {
-	border-radius: 50px;
+.button:hover{
+    border-radius: 50px;
 	background: #fcad26;
-	color: #fff;
+    color: #fff;
 }
-
-.game-btn {
-   border-radius: 5%;
-   width: 50%;
-   height: auto;
-   top: 25%;
-   padding: 15px;
-   z-index: 2;
+.game-btn{
+    border-radius: 5%;
+    width: 50%;
+    height: auto;
+    top: 25%;
+    padding: 15px;
+    z-index: 2;
 }
-
 .gryffindor, .hufflepuff{
-   margin-left: 50%;
-   margin-right: 0;
-   justify-items: right;
+    margin-left: 50%;
+    margin-right: 0;
+    justify-items: right;
 }
 .slytherin, .ravenclaw{
-   margin-left: 0;
-   margin-right: 50%;
-   justify-items: left;
+    margin-left: 0;
+    margin-right: 50%;
+    justify-items: left;
 }
 
 .lost{
-   margin: 0;
-   padding: 30% 0;
-   width: 30%;
-   height: auto;
-   text-align: center;
-   justify-content: center;
-   position: relative;
-   z-index: 2;
-   font-size: 100%;  
-   font-family: "ParryHotter", sans-serif;
-   color: #f5cd11;
+    margin: 0;
+    padding: 30% 0;
+    width: 30%;
+    height: auto;
+    text-align: center;
+    justify-content: center;
+    position: relative;
+    z-index: 2;
+    font-size: 100%;  
+    font-family: "ParryHotter", sans-serif;
+    color: #f5cd11;
+}
+/*----------------------------------------Help*/
+#help{
+    margin-top: 10%;
 }
 
-/*----------------------------------------Help*/
-
+.instructions{
+    width: 80%;
+    padding-left: 12%;
+    margin: 0;
+    margin-top: 0.5%;
+    text-align: center;
+    font-family: "ubunto", sans-serif;
+    font-size: 100%;
+    font-weight:100 ;
+}
 /*---------------------------------------About*/
+#about{
+    margin-top: 10%;
+}
+.source{
+    font-family: "ubunto", sans-serif;
+    font-size: 50%;
+    padding-left: 15%;
+    font-weight:100 ;
+}
+.subject{
+    font-size: 150%;
+    font-family: "ParryHotter", sans-serif;
+    color: #f5cd11;
+    padding: 0%;
+    margin: 0%;
+}
+.subjectJK{
+    font-size: 125%;
+    font-family: "ParryHotter", sans-serif;
+    color: #f5cd11;
+    padding: 0%;
+    margin: 0%;
+}
+.synopsis{
+    width: 90%;
+    margin-left: 5%;
+    font-family: "ubunto", sans-serif;
+    font-size: 70%;
+    font-weight:100 ;
+}
 /*-----------------------------------Keyframes*/
 /*feature 1 - dcode */
-@keyframes moveUp {
-   from {
-      opacity:0;
-      transform:rotateX(-10deg);
-   }
-   to {
-      opacity:1;
-      transform:rotateX(0);
-   }
+@keyframes moveUp{
+    from{
+        opacity:0;
+        transform:rotateX(-10deg);
+    }
+    to{
+    opacity:1;
+    transform:rotateX(0);
+    }
 }
 /* feature 2*/
-@keyframes fadeIn {
-  from {opacity:0.5 }
-   to {opacity: 1 }
+@keyframes fadeIn{
+    from{
+        opacity:0.5;
+    }
+    to{
+        opacity: 1;
+    }
 }
 
 /*---------------------------------Media Queries*/
-@media (max-width:4096px) {
-   .navbar-fixed-top {
-      top:0;
-      border-width: 0 0 1px;
-   }
-   .navbar-toggle {
-      display: block;
-   }
+@media (max-width:4096px){
+    .navbar-fixed-top{
+    top:0;
+    border-width: 0 0 1px;
+    }
+    .navbar-toggle {
+    display: block;
+    }
 }
-@media (max-width: 1024px) {
-   .school-crest-container{
-      padding-top: 25%;
-   }
-   h1 { 
-      padding-bottom: 10%;
-   }
-   .hogwarts-crest{
-      width: 60%;
-   }
+@media (max-width: 1024px){
+    .school-crest-container{
+        padding-top: 25%;
+    }
+    h1{ 
+        padding-bottom: 10%;
+    }
+    .hogwarts-crest{
+        width: 60%;
+    }
 }
-@media (max-width: 768px) {
-   .school-crest-container{
-      padding-top: 20%;
-   }
-   h1 {
-      padding: 10% 0;
-   }
-   .top-row {
-      padding-top: 10%;
-   }
-   .hogwarts-crest{  
-      padding-top: 20%;
-      width: 70%;
-   }
-   .game-btn {
-      width: 90%;
-   }
-   .gryffindor, .hufflepuff{
-      margin-left: 0%;
-   }
-   .slytherin, .ravenclaw{
-      margin-right: 0%;
-   }
-   #play{
-      padding-top: 10%;
-   }
+@media (max-width: 768px){
+    .school-crest-container{
+        padding-top: 20%;
+    }
+    h1{
+        padding: 10% 0;
+    }
+    .top-row{
+        padding-top: 10%;
+    }
+    .hogwarts-crest{  
+        padding-top: 20%;
+        width: 70%;
+    }
+    .game-btn {
+        width: 90%;
+    }
+    .gryffindor, .hufflepuff{
+        margin-left: 0%;
+    }
+    .slytherin, .ravenclaw{
+        margin-right: 0%;
+    }
+    #play{
+        padding-top: 10%;
+    }
 }
-@media (max-width: 540px) {
-   .school-crest-container,
-   .house-crest-container{
-      padding-top: 5%;
-   }
-   h1 {
-      font-size: 34px; 
-   }
-   .hogwarts-crest{
-      width: 80%;
-   }
-   .game-btn {
-      width: 90%;
-   }
-  .gryffindor, .hufflepuff{
-      margin-left: 15%;
-   }
-   .slytherin, .ravenclaw{
-      margin-right: 15%;
-   }
+@media (max-width: 540px){
+    .school-crest-container,
+    .house-crest-container{
+        padding-top: 5%;
+    }
+    h1{
+        font-size: 34px; 
+    }
+    .hogwarts-crest{
+        width: 80%;
+    }
+    .game-btn {
+        width: 90%;
+    }
+    .gryffindor, .hufflepuff{
+        margin-left: 15%;
+    }
+    .slytherin, .ravenclaw{
+        margin-right: 15%;
+    }
 }
-@media (max-width: 300px) {
-   .school-crest-container,
-   .house-crest-container{
-      padding-top: 30%;
-   }
-   h1 {
-      font-size: 34px; 
-   }
-   .hogwarts-crest{
-      width: 80%;
-   }
-   .game-btn {
-      width: 90%;
-   }
-  .gryffindor, .hufflepuff{
-      margin-left: 15%;
-   }
-   .slytherin, .ravenclaw{
-      margin-right: 15%;
-   }
+@media (max-width: 300px){
+    .school-crest-container,
+    .house-crest-container{
+        padding-top: 30%;
+    }
+    h1{
+        font-size: 34px; 
+    }
+    .hogwarts-crest{
+        width: 80%;
+    }
+    .game-btn{
+        width: 90%;
+    }
+    .gryffindor, .hufflepuff{
+        margin-left: 15%;
+    }
+    .slytherin, .ravenclaw{
+        margin-right: 15%;
+    }
 }
