--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,20 +175,18 @@ footer ul{
     padding: 10% 5%;
 }
 #message-board{
-    /*display: none;*/
+    display: none;
     border: 2px solid #000;
     border-radius: 2.5%;
-    height: auto;
+    height: 60%;
     width: 100%;
     size: 1%;
     z-index: 1;
     position: relative;
+    filter:brightness(1);
 }
 
 .lost{
-    /*display: none;*/
-    /*margin-top: 15%;
-    padding: 15%;*/
     display: block;
     width: 60%;
     color: #f5cd11;
@@ -199,7 +197,34 @@ footer ul{
     left: 20%; right: 0; top: 32%; bottom: 0;  /* center */
     border: none;
     background: none;
+   -webkit-text-stroke: 0.5px black;
+    text-shadow: -1px 0 red, 0 1px red, 1px 0 red,-1px 0 red;
     font-size: 150%;  
+    font-weight: 300;
+    font-family: "ParryHotter", sans-serif;
+}
+#dobby{
+    display: none;
+    height: 50%;
+    width: auto;
+    z-index: 2;
+    position: absolute;
+    left: 0; right: 0; top: 0%; bottom: 0; margin: auto; /* center */
+}
+.win{
+    display: block;
+    width: 100%;
+    color: #f5cd11;
+    position: absolute;
+    z-index: 3;
+    text-align: center;
+    align-items: center;
+    left: 0; right: 0; top: 50%; bottom: 0;  /* center */
+    border: none;
+    background: none;
+   -webkit-text-stroke: 0.5px black;
+    text-shadow: -1px 0 red, 0 1px red, 1px 0 red,-1px 0 red;
+    font-size: 250%;  
     font-weight: 300;
     font-family: "ParryHotter", sans-serif;
 }
