--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ footer ul{
 }
 /*---------------------------------------Game Page*/
 .house-crest-container{
-    max-height: 100vh;
+    height: 100vh;
     max-width: 100vw;
     justify-content: center;
     padding: 5% 0;
@@ -175,12 +175,12 @@ footer ul{
     padding: 10% 5%;
 }
 #message-board{
+    background-color: #200236;
     display: none;
-    border: 2px solid #000;
-    border-radius: 2.5%;
+    border: none;
+    outline:none;
     height: 60%;
     width: 100%;
-    size: 1%;
     z-index: 1;
     position: relative;
     filter:brightness(1);
@@ -189,30 +189,31 @@ footer ul{
 .lost{
     display: block;
     width: 60%;
-    color: #f5cd11;
+    color: black;
     position: absolute;
     z-index: 2;
     text-align: center;
     align-items: center;
-    left: 20%; right: 0; top: 32%; bottom: 0;  /* center */
+    left: 20%; right: 0; top: 34%; bottom: 0;  /* center */
     border: none;
     background: none;
-   -webkit-text-stroke: 0.5px black;
-    text-shadow: -1px 0 red, 0 1px red, 1px 0 red,-1px 0 red;
+ /*  -webkit-text-stroke: 0.5px #f5cd11;*/
+   /* text-shadow: -1px 0 red, 0 1px red, 1px 0 red,-1px 0 red;*/
     font-size: 150%;  
-    font-weight: 300;
+    font-weight: 400;
     font-family: "ParryHotter", sans-serif;
 }
 #dobby{
     display: none;
-    height: 50%;
-    width: auto;
+    padding-top: 0%;
+    width:30%;
+    height: auto;
     z-index: 2;
     position: absolute;
-    left: 0; right: 0; top: 0%; bottom: 0; margin: auto; /* center */
+    left: 0; right: 0; top: 0; bottom: 0; margin: auto; /* center */
 }
 .win{
-    display: block;
+    padding-top:18%;
     width: 100%;
     color: #f5cd11;
     position: absolute;
