--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,7 @@
     font-style: normal;
 }
 /*----------------------------------------- colour*/
-.gryffindor-red,
-.slytherin-green,
-.hufflepuff-yellow, 
-.ravenclaw-blue{
+.lightUp{
     filter:brightness(2);
 }
 /*------------------------------------------Global*/
@@ -33,7 +30,6 @@ a{
     color: #fff;
 }
 h1{
-    padding: 0%;
     font-size: 40px;  
     font-family: "ParryHotter", sans-serif;
     color: #f5cd11;
@@ -115,7 +111,7 @@ footer ul{
     height: 100vh;
     max-width: 100vw;
     justify-content: center;
-    padding: 5% 0;
+    padding: 5%;
     align-items: center;
     position: absolute;
     overflow: hidden;
@@ -123,58 +119,58 @@ footer ul{
 #play{
     margin: 0;
     padding: 0;
-   /* height: 30%;*/
     border: 3px solid #f5cd11;
     color:#f5cd11;
     position: absolute;
     z-index: 2;
-    left: 50%; right: 0; top: 0%; bottom: 0; margin: auto; /* center */
-    font-size: 400%;
+    left: 0; right: 0; top: 0%; bottom: 0; margin: auto; /* center */
+    font-size: 500%;
     outline: none;
     border: none;
     background: none;
 }
 .game{
-    padding-top: 0%;
-    padding-left: 30%;
+    padding: 0% 30% 0% 30%;
 }
 /*.button:hover{
     border-radius: 50px;
 	background: #fcad26;
     color: #fff;
 }*/
-.game-btn.gryffindor,
-.game-btn.hufflepuff{
-    width: 90%;
-    height: auto;
-    top: 25%;
-    padding: 15px;
-    z-index: 2;
-    outline: none;
-    border: none;
-}
-.game-btn.slytherin,
-.game-btn.ravenclaw{
-    width: 90%;
-    height: auto;
-    top: 25%;
-    padding: 15px;
-    z-index: 2;
-    outline: none;
-    border: none;
-}
 #gryffindor,
 #hufflepuff{
-    margin-left: 40%;
+    margin-left: 0%;
 }
 #slytherin, 
 #ravenclaw{
-    margin-left: 5%;
+   margin-left: 20%;
 }
+#gryffindor.game-btn,
+#hufflepuff.game-btn{
+    width: 80%;
+    height: auto;
+    top: 10%;
+    padding: 10px;
+    z-index: 2;
+    outline: none;
+    border: none;
+}
+#slytherin.game-btn,
+#ravenclaw.game-btn{
+    width: 80%;
+    height: auto;
+    top: 10%;
+    padding: 10px;
+    z-index: 2;
+    outline: none;
+    border: none;
+}
+
 .board {
     padding: 10% 5%;
 }
 #message-board{
+    left: 1%; right: 0; top: 55%; bottom: 0; margin: auto; /* center */
     background-color: #200236;
     display: none;
     border: none;
@@ -188,32 +184,30 @@ footer ul{
 
 .lost{
     display: block;
-    width: 60%;
+    width: 70%;
     color: black;
     position: absolute;
-    z-index: 2;
+    z-index: 5;
     text-align: center;
     align-items: center;
-    left: 20%; right: 0; top: 34%; bottom: 0;  /* center */
+    left: 0; right: 0; top: 75%; bottom: 0; margin: auto; /* center */
     border: none;
     background: none;
- /*  -webkit-text-stroke: 0.5px #f5cd11;*/
-   /* text-shadow: -1px 0 red, 0 1px red, 1px 0 red,-1px 0 red;*/
-    font-size: 150%;  
+    font-size: 200%;  
     font-weight: 400;
     font-family: "ParryHotter", sans-serif;
 }
 #dobby{
     display: none;
-    padding-top: 0%;
-    width:30%;
+    padding-top: 30%;
+    width:20%;
     height: auto;
     z-index: 3;
     position: absolute;
     left: 0; right: 0; top: 0; bottom: 0; margin: auto; /* center */
 }
 .win{
-    padding-top:18%;
+    padding-top:30%;
     width: 100%;
     color: #f5cd11;
     position: absolute;
@@ -312,8 +306,7 @@ footer ul{
     .house-crest-container{
         padding-top: 10%;
     }
-    h1{ 
-        
+    h1{  
         padding-bottom: 10%;
     }
     .hogwarts-crest{
@@ -322,16 +315,36 @@ footer ul{
     .game-btn {
         width: 90%;
     }
- /*   #gryffindor, #hufflepuff{
-        margin-left: 0%;
+    #gryffindor,
+    #hufflepuff{
+    margin-left: -50%;
     }
-    #slytherin, #ravenclaw{
-        margin-right: 0%;
-    } */
-    #play{
-        padding-top: 0%;
+    #gryffindor.game-btn,
+    #hufflepuff.game-btn,
+    #slytherin.game-btn,
+    #ravenclaw.game-btn{
+        width: 150%;
+    }
+    #message-board{
+        padding-top: 30%;
+        left: -25%;
+        width: 180%;
+        height: 80%;
+    }
+    .lost{
+        padding-top: 12.5%;
+        padding-left: 10%;
+        font-size: 240%; 
+    }
+    #dobby{
+        padding-top: 100%;
+        width: 30%;
+    }
+    .win{
+        padding-top:70%;
     }
 }
+/*------media -- 768 -------*/
 @media (max-width: 768px){
     .school-crest-container,
     .house-crest-container{
@@ -351,35 +364,43 @@ footer ul{
         padding-left: 0;
     }
 
-    .game-btn.gryffindor,
-    .game-btn.hufflepuff{
-        width: 60%;
+    #gryffindor.game-btn,
+    #hufflepuff.game-btn{
+        width: 95%;
     }
-    .game-btn.slytherin,
-    .game-btn.ravenclaw{
-        width: 60%;
+    #slytherin.game-btn,
+    #ravenclaw.game-btn{
+        width: 95%;
     }
     #gryffindor, #hufflepuff{
         margin-left: 50%;
     }
     #slytherin, #ravenclaw{
-        margin-left: 10%;
+        margin-left: 60%;
     }
     #play{
         padding-top: 8%;
-        margin-left: 0%;
     }
     #message-board{
-        border: none;
-        padding-left: 20%;
-        width: 90%;
-        height: 55%;
+        margin-top: -25%;
+        padding-left: 40%;
+        width: 150%;
+        height: 100%;
     }
     .lost{
-        left: 25%; top: 25%;
+        padding-top: 5%;
+        padding-left: 0%;
         font-size: 200%;
     }
+    #dobby{
+        padding-top: 70%;
+        width:25%;
+    }
+    .win{
+        padding-top:55%;
+    }
 }
+/*--------media -- 540 ------*/
 @media (max-width: 540px){
     .school-crest-container,
     .house-crest-container{
@@ -396,13 +417,13 @@ footer ul{
         padding-left: 0;
     }
 
-    .game-btn.gryffindor,
-    .game-btn.hufflepuff{
-        width: 75%;
+    #gryffindor.game-btn,
+    #hufflepuff.game-btn{
+        width: 100%;
     }
-    .game-btn.slytherin,
-    .game-btn.ravenclaw{
-        width: 75%;
+    #slytherin.game-btn,
+    #ravenclaw.game-btn{
+        width: 100%;
     }
     #gryffindor, #hufflepuff{
         margin-left: 35%;
@@ -410,13 +431,26 @@ footer ul{
     #slytherin, #ravenclaw{
         margin-right: 15%;
     }
-    #play{
-        margin-left: -5%;
+    #dobby{
+        padding-top: 70%;
+        width:45%;
+    }
+    .win{
+        padding-top:65%;
+    }
+    #message-board{
+        padding-top: 20%;
+        padding-left: 40%; 
+        width: 150%;
+        height: 110%;
     }
     .lost{
+        margin-top: -7.5%;
+        margin-left: 15%;
         font-size: 125%;
     }
 }
+/*----------media -- 300px ------*/
 @media (max-width: 300px){
     .school-crest-container,
     .house-crest-container{
@@ -431,23 +465,32 @@ footer ul{
     .game-btn{
         width: 100%;
     }
-   /* #gryffindor, #hufflepuff{
-        margin-left: 25%;
+        #gryffindor, #hufflepuff{
+        margin-left: 10%;
     }
     #slytherin, #ravenclaw{
-        margin-right: 15%;
-    }*/
-    /*    .game-btn.gryffindor,
-    .game-btn.hufflepuff{
-        width: 75%;
+        margin-left: 45%;
     }
-   /* .game-btn.slytherin,
-    .game-btn.ravenclaw{
-        width: 75%;
-    }*/
+    #gryffindor.game-btn,
+    #hufflepuff.game-btn{
+        width: 140%;
+    }
+    #slytherin.game-btn,
+    #ravenclaw.game-btn{
+        width: 140%;
+    }
+#play{
+    font-size: 300%;
+}
+    #dobby{
+        padding-top: 80%;
+        width:40%;
+    }
+    .win{
+        padding-top:75%;
+    font-size: 150%;  
+    font-weight: 200;
 
-    #play{
-        margin-left: -7%;
     }
     .lost{
         font-size: 100%;
