Fixing crest lighting up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,16 @@
 }
 /*----------------------------------------- colour*/
 .lightUp{
-    filter:brightness(2);
+   filter:brightness(2);
+}
+
+
+@keyframes crestLight {
+    from {filter: brightness(1);}
+    to {filter: brightness(2);}
+}
+element.style{
+    filter: brightness(2);
 }
 
 /*------------------------------------------Global*/
@@ -187,7 +196,7 @@ footer ul{
     z-index: 5;
     text-align: center;
     align-items: center;
-    left: 0; right: 0; top: 75%; bottom: 0; margin: auto; /* center */
+    left: 0; right: 0; top: 85%; bottom: 0; margin: auto; /* center */
     border: none;
     background: none;
     font-size: 200%;  
@@ -201,6 +210,7 @@ footer ul{
     height: auto;
     z-index: 3;
     position: absolute;
+    outline: none;
     left: 0; right: 0; top: 0; bottom: 0; margin: auto; /* center */
 }
 .win{
