--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ header{
     width: 100vw;
 }
 .navbar-dark{
-    float: right;
+    float: left;
     top:0;
     border-width: 0 0 1px;
 }
@@ -395,7 +395,7 @@ footer ul{
         height: 100%;
     }
     .lost{
-        padding-top: 5%;
+        top:70%;
         padding-left: 0%;
         font-size: 200%;
     }
