Made changes as per Lighthouse

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     src: url('fonts/ParryHotter.ttf');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 /*----lighting----*/
 .lightUp{
