--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 /* font face by Anke Arnold (www.anke-art.de) */
 @font-face{
     font-family: 'ParryHotter';
@@ -8,11 +15,13 @@
 }
 /*----lighting----*/
 .lightUp{
-   filter:brightness(2);
+   -webkit-filter:brightness(2);
+           filter:brightness(2);
 }
 /*----Global----*/
 html, body{
-    animation: fadeIn 500ms;
+    -webkit-animation: fadeIn 500ms;
+            animation: fadeIn 500ms;
     margin: 0;
     padding: 0;
     font-family: 'Ubuntu', sans-serif;
@@ -87,12 +96,17 @@ footer ul{
 }
 /*---------------------------------------Home Page*/
 .school-crest-container{
-    animation: moveUp 2s; /*feature 1 - dcode */
+    -webkit-animation: moveUp 2s;
+            animation: moveUp 2s; /*feature 1 - dcode */
     max-height: 100vh;
     max-width: 100vw;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding: 5% 0;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: absolute;
     overflow: hidden;
 }
@@ -106,9 +120,13 @@ footer ul{
 .house-crest-container{
     height: 100vh;
     max-width: 100vw;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding: 5%;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: absolute;
     overflow: hidden;
 }
@@ -177,7 +195,9 @@ footer ul{
     position: absolute;
     z-index: 5;
     text-align: center;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     left: 1em; right: 0; top: 6em; bottom: 0; margin: auto; /* center */
     border: none;
     background: none;
@@ -203,11 +223,13 @@ footer ul{
     position: absolute;
     z-index: 2;
     text-align: center;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     left: 0; right: 0; top: 50%; bottom: 0;  /* center */
     border: none;
     background: none;
-   -webkit-text-stroke: 0.5px black;
+    stroke: 1px black;
     text-shadow: -1px 0 red, 0 1px red, 1px 0 red,-1px 0 red;
     font-size: 250%;  
     font-weight: 300;
@@ -234,9 +256,13 @@ footer ul{
 .info-container{
     max-height: 100vh;
     max-width: 100vw;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding: 15% 0;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: absolute;
 }
 .source{
@@ -269,17 +295,39 @@ footer ul{
 }
 /*-----------------------------------Keyframes*/
 /*feature 1 - dcode */
-@keyframes moveUp{
+@-webkit-keyframes moveUp{
     from{
         opacity:0;
-        transform:rotateX(-20deg);
+        -webkit-transform:rotateX(-20deg);
+                transform:rotateX(-20deg);
     }
     to{
         opacity:1;
-        transform:rotateX(0);
+        -webkit-transform:rotateX(0);
+                transform:rotateX(0);
+    }
+}
+@keyframes moveUp{
+    from{
+        opacity:0;
+        -webkit-transform:rotateX(-20deg);
+                transform:rotateX(-20deg);
+    }
+    to{
+        opacity:1;
+        -webkit-transform:rotateX(0);
+                transform:rotateX(0);
     }
 }
 /* feature 2*/
+@-webkit-keyframes fadeIn{
+    from{
+        opacity:0.5;
+    }
+    to{
+        opacity: 1;
+    }
+}
 @keyframes fadeIn{
     from{
         opacity:0.5;
